--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gym-today",
+  "name": "Barber-app",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -14,7 +14,8 @@
     "@heroicons/react": "^2.0.18",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.11.2"
+    "react-router-dom": "^6.11.2",
+    "vite-plugin-svgr": "3.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
@@ -22,6 +23,7 @@
     "@typescript-eslint/eslint-plugin": "^5.57.1",
     "@typescript-eslint/parser": "^5.57.1",
     "@vitejs/plugin-react": "^4.0.0",
+    "autoprefixer": "^10.4.14",
     "eslint": "^8.0.1",
     "eslint-config-semistandard": "^17.0.0",
     "eslint-config-standard": "^17.0.0",
@@ -30,6 +32,7 @@
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
+    "postcss": "^8.4.23",
     "prettier": "2.8.8",
     "tailwindcss": "^3.3.2",
     "typescript": "^5.0.2",
