--- a/package.json
+++ b/package.json
@@ -12,11 +12,18 @@
   "dependencies": {
     "@headlessui/react": "^1.7.14",
     "@heroicons/react": "^2.0.18",
+    "clsx": "^1.2.1",
+    "date-fns": "^2.30.0",
+    "inter": "^2.1.0",
+    "lucide-react": "^0.221.0",
     "mapbox-gl": "^2.14.1",
+    "pnpm": "^8.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-router-dom": "^6.11.2",
+    "react-timecalendar": "^2.1.3",
+    "tailwind-merge": "^1.12.0",
     "vite-plugin-svgr": "3.2.0"
   },
   "devDependencies": {
