--- a/package.json
+++ b/package.json
@@ -12,15 +12,25 @@
   "dependencies": {
     "@headlessui/react": "^1.7.14",
     "@heroicons/react": "^2.0.18",
+    "better-react-spinkit": "^2.0.4",
+    "bootstrap": "^5.3.0",
     "clsx": "^1.2.1",
     "date-fns": "^2.30.0",
+    "emailjs": "^4.0.2",
+    "emailjs-com": "^3.2.0",
+    "firebase": "^9.22.1",
+    "firebase-admin": "^11.9.0",
+    "i": "^0.3.7",
     "inter": "^2.1.0",
     "lucide-react": "^0.221.0",
-    "mapbox-gl": "^2.14.1",
+    "mapbox-gl": "^2.15.0",
+    "nodemailer": "^6.9.3",
     "pnpm": "^8.5.1",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
+    "react-map-gl": "^7.0.25",
     "react-router-dom": "^6.11.2",
     "react-timecalendar": "^2.1.3",
     "tailwind-merge": "^1.12.0",
