--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,6 @@
     "noFallthroughCasesInSwitch": true
   },
   "include": ["src/**/*.d.ts",
-  "src/**/*.ts"],
+  "src/**/*.ts", "functions/vite-env.d.ts"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
